--- a/src/components/pages/home/Style/Contact.css
+++ b/src/components/pages/home/Style/Contact.css
@@ -44,6 +44,7 @@
   }
 
 #contactsec .contact-info-container {
+  margin-top: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
