--- a/src/components/admin/components/styles/AdminContent.css
+++ b/src/components/admin/components/styles/AdminContent.css
@@ -1,9 +1,14 @@
+.admin-promos-main-container {
+  display: flex;
+}
+
 .form-container {
   max-width: 100%;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ddd;
-  border-radius: 8px;
+  /* border-radius: 8px; */
+  background-color: var(--lightcolor);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -14,13 +19,13 @@
 
 .form-container form {
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
 }
 
 .file-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .file-preview {
@@ -34,18 +39,20 @@
 }
 
 .form-container label {
+  width: 100%;
   margin-top: 10px;
   font-size: 16px;
 }
 
 .input-field,
 .textarea-field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   padding: 8px;
   margin-top: 5px;
   font-size: 14px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
   box-sizing: border-box;
 }
 
@@ -54,7 +61,7 @@
   height: 150px; /* Adjust the height as needed */
 }
 
-.submit-button {
+/* .submit-button {
   background-color: #007bff;
   color: #fff;
   padding: 10px;
@@ -67,7 +74,7 @@
 
 .submit-button:hover {
   background-color: #0056b3;
-}
+} */
 
 .ActionBtn {
   display: flex;
@@ -104,4 +111,169 @@
     }
 
     
+  }
+
+  .admin-promos-main-container .form-container input {
+    margin-top: 2rem;
+    color: var(--darkcolor);
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.admin-promos-main-container .form-container ::placeholder {
+    color: var(--gray);
+    font-size: 16px;
+}
+
+
+.admin-promos-main-container .form-container input[type=text] {
+    width: 100%;
+    padding: 12px 0px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 3px solid var(--DB);
+  }
+
+  .admin-promos-main-container .form-container input[type=text]:focus {
+    border-bottom: 3px solid var(--DB);
+  }
+
+  .admin-promos-main-container .form-container textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 0px;
+    margin: 8px 0;
+    font-size: 1rem;
+    font-weight: 500;
+    box-sizing: border-box;
+    border: none;
+    background-color: var(--black);
+    border-bottom: 3px solid var(--DB);
+    font-size: 16px;
+    outline: none;
+    resize: vertical;
+  }
+
+  .admin-promos-main-container .form-container textarea:focus {
+    border-bottom: 3px solid var(--DB);
+  }
+  .admin-promos-main-container .form-container button {
+    width: 100%;
+    margin-top: 5rem;
+    padding: 20px 30px 20px 30px;
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--lightcolor);
+    font-family: "Josefin Sans", sans-serif !important;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    border-style: none;
+    border-radius: 50px 50px 50px 50px;
+    background-color: var(--btnPrimary);
+  }
+  
+  .admin-promos-main-container .form-container button:hover {
+    background-color: var(--btnSecondary);
+  }
+
+  .ActionBtn .btn-warning {
+    color: var(--btnWarning);
+    background-color: transparent;
+    border: solid 2px var(--btnWarning);
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+  }
+  
+  .ActionBtn .btn-danger {
+    color: var(--btnDanger);
+    background-color: transparent;
+    border: solid 2px var(--btnDanger);
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+  }
+  
+  .ActionBtn .btn-warning:hover {
+    color: var(--lightcolor) !important;
+    border: solid 2px var(--btnWarning) !important;
+    background-color: var(--btnWarning);
+  }
+  
+  .ActionBtn .btn-danger:hover {
+    color: var(--lightcolor) !important;
+    border: solid 2px var(--btnDanger) !important;
+    background-color: var(--btnDanger);
+  }
+
+  .ActionBtn {
+    display: flex;
+    gap: 10px;
+  }
+
+  .ActionBtn button {
+    font-weight: 600;
+  }
+
+  .gallery-container {
+    width: 400px;
+  }
+
+  .gallery-container input {
+    margin-top: 2rem;
+    color: var(--darkcolor);
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.gallery-container ::placeholder {
+    color: var(--gray);
+    font-size: 16px;
+}
+
+
+.gallery-container input[type=text] {
+    width: 100%;
+    padding: 12px 0px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 3px solid var(--DB);
+  }
+
+  .gallery-container input[type=text]:focus {
+    border-bottom: 3px solid var(--DB);
+  }
+
+  .gallery-container textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 0px;
+    margin: 8px 0;
+    font-size: 1rem;
+    font-weight: 500;
+    box-sizing: border-box;
+    border: none;
+    background-color: var(--black);
+    border-bottom: 3px solid var(--DB);
+    font-size: 16px;
+    outline: none;
+    resize: vertical;
+  }
+
+  .gallery-container textarea:focus {
+    border-bottom: 3px solid var(--DB);
+  }
+  .gallery-container button {
+    width: 100%;
+    margin-top: 5rem;
+    padding: 20px 30px 20px 30px;
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--lightcolor);
+    font-family: "Josefin Sans", sans-serif !important;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    border-style: none;
+    border-radius: 50px 50px 50px 50px;
+    background-color: var(--btnPrimary);
   }
