--- a/src/components/admin/styles/Dashboard.css
+++ b/src/components/admin/styles/Dashboard.css
@@ -37,7 +37,7 @@
 .card p {
   font-size: 24px;
   font-weight: bold;
-  color: #007bff; /* Change the color to your preference */
+  color: var(--btnPrimary); /* Change the color to your preference */
   margin: 0;
 }
 
@@ -63,4 +63,12 @@ h1 {
 .notification-icon {
   cursor: pointer;
   margin-left: 10px; /* Adjust the margin as needed for spacing */
+}
+
+.admin-span1 {
+  color: var(--vatan);
+}
+
+.admin-span2{
+  color: var(--hp);
 }
