--- a/src/components/pages/home/Style/Prices.css
+++ b/src/components/pages/home/Style/Prices.css
@@ -1,6 +1,6 @@
 #prices {
     width: 100%;
-    height: 400px;
+    height: 40  0px;
     display: flex;
     justify-content: center;
     text-align: center;
