--- a/src/antdesign.css
+++ b/src/antdesign.css
@@ -44,3 +44,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+.ant-modal-footer {
+    display: none !important;
+}
