--- a/src/components/admin/components/styles/AdminContent.css
+++ b/src/components/admin/components/styles/AdminContent.css
@@ -214,24 +214,24 @@
     font-weight: 600;
   }
 
-  .gallery-container {
+  .form-container .gallery-container {
     width: 400px;
   }
 
-  .gallery-container input {
+  .form-container .gallery-container input {
     margin-top: 2rem;
     color: var(--darkcolor);
     font-size: 16px;
     font-weight: 500;
 }
 
-.gallery-container ::placeholder {
+.form-container .gallery-container ::placeholder {
     color: var(--gray);
     font-size: 16px;
 }
 
 
-.gallery-container input[type=text] {
+.form-container .gallery-container input[type=text] {
     width: 100%;
     padding: 12px 0px;
     margin: 8px 0;
@@ -240,11 +240,11 @@
     border-bottom: 3px solid var(--DB);
   }
 
-  .gallery-container input[type=text]:focus {
+  .form-container .gallery-container input[type=text]:focus {
     border-bottom: 3px solid var(--DB);
   }
 
-  .gallery-container textarea {
+  .form-container .gallery-container textarea {
     width: 100%;
     height: 150px;
     padding: 12px 0px;
@@ -260,10 +260,10 @@
     resize: vertical;
   }
 
-  .gallery-container textarea:focus {
+  .form-container .gallery-container textarea:focus {
     border-bottom: 3px solid var(--DB);
   }
-  .gallery-container button {
+  .form-container .gallery-container button {
     width: 100%;
     margin-top: 5rem;
     padding: 20px 30px 20px 30px;
