--- a/src/components/pages/profile/Style/UserRecord.css
+++ b/src/components/pages/profile/Style/UserRecord.css
@@ -216,10 +216,66 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 1127px;
+    /* width: 1127px; */
+  }
+  .test-01 {
+    overflow-x: auto;
+   }
+
+  .test-02 {
+    height: 250px;
+    padding-top: 150px;
+    display: flex;
+    overflow-y: auto;
+    justify-content: center;
   }
 
+  /* total width */
+  .test-01::-webkit-scrollbar {
+    background-color: #fff;
+    width: 16px;
+}
 
+/* background of the scrollbar except button or resizer */
+.test-01::-webkit-scrollbar-track {
+    background-color: #fff;
+}
+
+/* scrollbar itself */
+.test-01::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 4px solid #fff;
+}
+
+/* set button(top and bottom of the scrollbar) */
+.test-01::-webkit-scrollbar-button {
+    display:none;
+}
+
+
+  /* total width */
+  .test-02::-webkit-scrollbar {
+    background-color: #fff;
+    width: 12px;
+}
+
+/* background of the scrollbar except button or resizer */
+.test-02::-webkit-scrollbar-track {
+    background-color: #fff;
+}
+
+/* scrollbar itself */
+.test-02::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 4px solid #fff;
+}
+
+/* set button(top and bottom of the scrollbar) */
+.test-02::-webkit-scrollbar-button {
+    display:none;
+}
   
 
   /* mobile res appointment-selection */
